@@ -1,5 +1,5 @@
 /* -*- c-file-style: "ruby"; indent-tabs-mode: nil -*- */
-/* $Id: rbgnome-canvas-item.c,v 1.19 2005/02/15 07:29:36 mutoh Exp $ */
+/* $Id: rbgnome-canvas-item.c,v 1.20 2005/08/13 09:02:53 mutoh Exp $ */
 
 /* Gnome::CanvasItem widget for Ruby/Gnome
  * Copyright (C) 2002-2004 Ruby-GNOME2 Project Team
@@ -56,6 +56,10 @@ citem_intialize(self, parent, hash)
 {
     GnomeCanvasItem *item;
     GnomeCanvasGroup *group;
+
+    if (! rb_obj_is_kind_of(parent, GTYPE2CLASS(GNOME_TYPE_CANVAS_GROUP))){
+        rb_raise(rb_eArgError, "the 1st parameter should be Gnome::CanvasGroup");
+    }
 
     group = GNOME_CANVAS_GROUP(RVAL2GOBJ(parent));
     item = GNOME_CANVAS_ITEM(g_object_new(RVAL2GTYPE(self), NULL));
